@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

'left to right direction

'Declare all classes
class CommandResult
interface Command
abstract ItemCommand
abstract AddCommand<Item>
abstract InfoCommand<Item>
abstract ListCommand<Item>
abstract FilterCommand<Item>
abstract EditCommand<Item>
abstract DeleteCommand<Item>
abstract ClearCommand<Item>



'All commands extend ItemCommand which extends Command
ItemCommand --|> Command
AddCommand --|> ItemCommand
InfoCommand --|> ItemCommand
ListCommand --|> ItemCommand
FilterCommand --|> ItemCommand
EditCommand --|> ItemCommand
DeleteCommand --|> ItemCommand
ClearCommand --|> ItemCommand

'All concrete commands
AddXCommand --|> AddCommand
InfoXCommand --|> InfoCommand
ListXCommand --|> ListCommand
FilterXCommand --|> FilterCommand
EditXCommand --|> EditCommand
AddTagToXCommand --|> EditXCommand
RemoveTagFromXCommand --|> EditXCommand
AddPersonToYCommand --|> EditYCommand
EditYCommand --|> EditCommand
EditEventCommand --|> EditCommand
RemovePersonFromYCommand --|> EditYCommand
AddPersonToLogEventCommand --|> EditEventCommand
RemovePersonFromLogEventCommand --|> EditEventCommand
DeleteXCommand --|> DeleteCommand
ClearXCommand --|> ClearCommand

Command --> CommandResult : on execution gives >

@enduml
